--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-route.min.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/mainCtrl.js"></script>
+        <script src="scripts/services/bookService.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     </head>
     <body ng-app="ngdemoApp">
