--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/mainCtrl.js"></script>
         <script src="scripts/services/bookService.js"></script>
+        <script src="scripts/services/QueryStringService.js"></script>
+        <script src="scripts/directives/filter-field.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     </head>
     <body ng-app="ngdemoApp">
